# ComfyUI-Seed-Nodes

./: LICENSE  README.md  __init__.py  pyproject.toml
extra/: run_server.ps1  server.py
nodes/: image_pixelator.py  image_slic_pixelator.py  image_to_3d.py  image_transparency_crop.py  load_image.py  load_multiple_images.py  qwen_vl_api.py  screen_mode_remove_black.py  seed_save_audio.py  siliconflow_vl_api.py
